Fix source pagnation being clipped in.

--- a/src/App.css
+++ b/src/App.css
@@ -93,9 +93,10 @@ html, body {
   border-style: solid;
   border-color: var(--color-border);
   border-width: 1px;
+  
 .source_pagnation {
     background-color: var(--color-bg-primary);
-    padding: 5px 5px 5px 15px;
+    padding: 10px 5px 10px 15px;
     font-size: clamp(7px, 2vw, 13px); /* Dynamically adjust font size */
     height: 2%; /* Set the height */
     display: flex; /* Use Flexbox for alignment */
